--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,3 +25,24 @@ jobs:
 
       - name: Run rust tests
         run: cargo test
+
+  frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.16.0'
+
+    - name: Install frontend dependencies
+      run: npm install
+
+    - name: Test
+      run: npm run test
+
+    - name: Lint
+      run: npm run lint
