--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xstate/react": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use-websocket": "^4.8.1",
+    "xstate": "^5.16.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
