--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@ts-rest/core": "^3.51.0",
     "@xstate/react": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
