--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 diesel = { version = "2.2.2", features = ["postgres"] }
 dotenvy = "0.15.7"
 rocket = { version = "0.5.1", features = ["json"] }
+rocket_cors = "0.6.0"
 rocket_ws = "0.1.1"
 serde = "1.0.204"
 serde_json = "1.0.120"
