Install playwright for running frontend e2e tests

--- a/frontend/makefile
+++ b/frontend/makefile
@@ -6,16 +6,21 @@ run:
 .PHONY:install
 install:
 	npm install
+	npx playwright install chromium --with-deps
 
 
 .PHONY:local_ci
-local_ci: test lint
+local_ci: lint test playwright
 
 
 .PHONY:test
 test:
 	npm test
 
+
+.PHONY:playwright
+playwright:
+	npx playwright test
 
 .PHONY:lint
 lint:
