--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,8 +54,18 @@ jobs:
     - name: Install frontend dependencies
       run: make install
 
+    - name: Lint
+      run: make lint
+
     - name: Test
       run: make test
 
-    - name: Lint
-      run: make lint
+    - name: Run Playwright tests
+      run: npx playwright test
+
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 1
