--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,7 @@ jobs:
       run: make test
 
     - name: Run Playwright tests
-      run: npx playwright test
+      run: make playwright
 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
