--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@xstate/react": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.1",
     "xstate": "^5.16.0",
     "zod": "^3.23.8"
   },
