--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . && prettier --check .",
+    "depcruiser": "npx depcruise src --validate",
     "type-check": "tsc --build --noEmit",
     "test": "echo 'write some frontend tests...'",
     "testing-server": "vite --host=127.0.0.1 --port=5174",
@@ -34,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "dependency-cruiser": "^16.10.2",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.35.0",
